--- a/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
+++ b/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
@@ -114,7 +114,7 @@
         "colab": {}
       },
       "source": [
-        "# Your Code Here"
+        "# Your Code Here . - I can make changes here. "
       ],
       "execution_count": 0,
       "outputs": []
